[tool.poetry]
name = "sparkifydb_rs"
version = "0.1.0"
description = ""
authors = ["K S <8283247+sunnykan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
boto3 = "^1.19.2"
waiting = "^1.4.1"
psycopg2 = "^2.9.1"
ipython-sql = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.1"
ipython = "^7.28.0"
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
